@@ -7,12 +7,8 @@
 
     <lawgiver:map_permissions
         action_group="add"
-        permissions="ftw.billboard: Add BillboardAd"
-        />
-
-    <lawgiver:map_permissions
-        action_group="add"
-        permissions="ftw.billboard: Add BillboardCategory"
+        permissions="ftw.billboard: Add BillboardAd,
+                     ftw.billboard: Add BillboardCategory"
         />
 
 </configure>
