@@ -2,11 +2,11 @@
 <rolemap>
   <permissions>
 
-    <permission name="ftw.billboard: Add BillboardAd" acquire="True">
+    <permission name="ftw.billboard: Add BillboardAd" acquire="False">
       <role name="Contributor" />
     </permission>
 
-    <permission name="ftw.billboard: Add BillboardCategory" acquire="True">
+    <permission name="ftw.billboard: Add BillboardCategory" acquire="False">
       <role name="Contributor" />
     </permission>
 
