@@ -5,7 +5,8 @@ CHANGELOG
 1.4.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Remove workflows.
+  [lknoepfel]
 
 
 1.4.1 (2015-03-25)
